RESOLVED FIXED90681
[EFL] WebKit-EFL headers do not build with gcc < 4.6
https://bugs.webkit.org/show_bug.cgi?id=90681
Summary [EFL] WebKit-EFL headers do not build with gcc < 4.6
Chris Dumez
Reported 2012-07-06 06:28:48 PDT
Because of forward declarations of our struct types in the public headers, we end up with redefinitions of typedefs. While this is allowed in C++, it is not valid C. We need to use #includes in the public headers instead of forwards declarations.
Attachments
Patch (1.48 KB, patch)
2012-07-06 06:34 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2012-07-06 06:31:58 PDT
gcc 4.6 started adding some features of upcoming C1X revision of the ISO C standard, which is why our MiniBrowser compiles: http://gcc.gnu.org/gcc-4.6/changes.html
Chris Dumez
Comment 2 2012-07-06 06:34:31 PDT
Created attachment 151076 [details] Patch Could someone please cq+ ?
WebKit Review Bot
Comment 3 2012-07-06 07:16:23 PDT
Comment on attachment 151076 [details] Patch Clearing flags on attachment: 151076 Committed r121969: <http://trac.webkit.org/changeset/121969>
WebKit Review Bot
Comment 4 2012-07-06 07:16:27 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.