[EFL] WebKit-EFL headers do not build with gcc < 4.6 https://bugs.webkit.org/show_bug.cgi?id=90681

Unreviewed EFL build fix.

Remove several forward declarations from ewk_view
header to avoid typedef redefinitions which are
illegal in C.

Patch by Christophe Dumez <christophe.dumez@intel.com> on 2012-07-06

* UIProcess/API/efl/ewk_view.h:

Canonical link: https://commits.webkit.org/108527@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@121969 268f45cc-cd09-0410-ab3c-d52691b4dbfc